# Proyecto_STR

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  config_storage.c  config_storage.h  http_server.c  main.c  rgb_led.c  tasks_common.h  wifi_app.c  wifi_app.h
main/fan_driver/: fan_driver.c  fan_driver.h
main/ntc_driver/: ntc_driver.c  ntc_driver.h
main/pir_driver/: pir_driver.c  pir_driver.h
main/sen_driver/: sen_driver.c  sen_driver.h
main/webpage/: app.css  app.js  index.html
